--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
     <div class="text-base font-bold space-y-1 persian-numbers">
       <div id="usd-box">دلار: ...</div>
     </div>
+    <section id="gold-box" class="bg-black rounded-xl shadow-md p-4 text-center mt-4 mx-6">
+      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">در حال بارگذاری...</p>
+      <small id="gold-change" class="block mt-1 text-base persian-numbers drop-shadow">...</small>
+    </section>
   </header>
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
+
+    <section class="bg-purple-800 rounded-xl shadow-md p-6 text-center">
+      <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">ارزش طلای آبشده</h3>
+      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
+    </section>
 
     <section id="profit-box" class="rounded-xl p-6 text-center text-yellow-400 persian-numbers">
       در حال محاسبه سود/زیان...
@@ -79,16 +88,19 @@
         }
 
         if (gold18) {
-          const valueStr = Math.abs(gold18.change_value).toLocaleString();
-          const percentStr = Math.abs(gold18.change_percent).toFixed(2);
-          const color = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
+          let valueStr = Math.abs(gold18.change_value).toLocaleString();
+          let percentStr = Math.abs(gold18.change_percent).toFixed(2);
+          const color = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
           animateElement("gold-change", `<span style="color:${color}">(${toPersianNumber(valueStr)} | ٪${toPersianNumber(percentStr)})</span>`);
 
           const goldPrice = gold18.price;
           const goldPurity = 750;
           const commission = 30000;
           const totalGoldValue = ((goldPrice - commission) * goldPurity / 750 ) * myGoldGrams;
+
+          document.getElementById("portfolio-title").innerText = `ارزش طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
+          animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
           const profitBox = document.getElementById("profit-box");
           profitBox.className = "bg-blue-800 rounded-xl shadow-md p-6 text-center";
@@ -133,7 +145,6 @@
     }
 
     fetchData();
-    setInterval(fetchData, 60000);
   </script>
 </body>
 </html>
