--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
   <header class="bg-black text-white py-4 text-center space-y-2">
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
     <div class="text-base font-bold space-y-1 persian-numbers">
-      <div id="usd-box">دلار: ...</div>
-      <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">در حال بارگذاری...</p>
-      <small id="gold-change" class="block mt-1 text-base persian-numbers drop-shadow">...</small>
+       <div id="usd-box">دلار: ...</div>
+       <div id="gold18-box">طلای ۱۸ عیار: ...</div> <!-- این خط را اضافه کنید -->
+       <p id="gold-price" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">در حال بارگذاری...</p>
+       <small id="gold-change" class="block mt-1 text-base persian-numbers drop-shadow">...</small>
     </div>
+
   </header>
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
@@ -91,6 +93,7 @@
           let percentStr = Math.abs(gold18.change_percent).toFixed(2);
           const color = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
           animateElement("gold-change", `<span style="color:${color}">(${toPersianNumber(valueStr)} | ٪${toPersianNumber(percentStr)})</span>`);
+          animateElement("gold18-box", `<span style="color:${color}">طلای ۱۸ عیار: ${toPersianNumber(gold18.price.toLocaleString())} (${toPersianNumber(valueStr)} | ${toPersianNumber(percentStr)}%)</span>`);
 
           const goldPrice = gold18.price;
           const goldPurity = 750;
