--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <div class="text-base font-bold space-y-1 persian-numbers">
        <div id="usd-box">دلار: ...</div>
        <div id="gold18-box">طلای ۱۸ عیار: ...</div> <!-- این خط را اضافه کنید -->
+       <p id="gold-price" class="hidden"></p>
+       <small id="gold-change" class="hidden"></small>
     </div>
 
   </header>
