--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       در حال محاسبه سود/زیان...
     </section>
 
+    <section class="bg-green-700 rounded-xl shadow-md p-6 text-center">
+       <h3 class="text-xl font-extrabold text-white mb-2 drop-shadow">دارایی رمزارزها</h3>
+      <div id="crypto-box" class="text-white persian-numbers space-y-1 text-lg">
+         در حال دریافت اطلاعات...
+     </div>
+    </section>
+
     <section class="bg-yellow-600 rounded-xl shadow-md p-6 text-center">
       <h3 class="text-xl font-extrabold text-black mb-2 drop-shadow">دارایی کل</h3>
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
@@ -130,6 +137,47 @@
             } else {
               animateElement("profit-box", "صندوق عیار یافت نشد");
             }
+          const cryptoHoldings = {
+          bitcoin: 0.0031,
+          ethereum: 0.12,
+          filecoin: 22
+          };
+
+          try {
+              const coinRes = await fetch("https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,ethereum,filecoin,tether&vs_currencies=usd");
+              const coinData = await coinRes.json();
+
+              const btcUsd = coinData.bitcoin.usd;
+              const ethUsd = coinData.ethereum.usd;
+              const filUsd = coinData.filecoin.usd;
+
+              const btcVal = cryptoHoldings.bitcoin * btcUsd;
+              const ethVal = cryptoHoldings.ethereum * ethUsd;
+              const filVal = cryptoHoldings.filecoin * filUsd;
+
+              const totalUsd = btcVal + ethVal + filVal;
+
+              // گرفتن نرخ تتر به تومان از API ایرانی
+              const usdtRes = await fetch("https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz");
+              const usdtData = await usdtRes.json();
+              const usdtInfo = usdtData.currency.find(i => i.symbol === "USDT");
+
+              const usdtPrice = usdtInfo ? usdtInfo.price : 0;
+              const totalIrt = Math.floor(totalUsd * usdtPrice);
+
+              animateElement("crypto-box", `
+                   <div>بیت‌کوین (${toPersianNumber(cryptoHoldings.bitcoin)}): ${toPersianNumber(btcVal.toFixed(2))} دلار</div>
+                   <div>اتریوم (${toPersianNumber(cryptoHoldings.ethereum)}): ${toPersianNumber(ethVal.toFixed(2))} دلار</div>
+                   <div>فایل‌کوین (${toPersianNumber(cryptoHoldings.filecoin)}): ${toPersianNumber(filVal.toFixed(2))} دلار</div>
+                   <div class="mt-2 text-xl text-yellow-300">مجموع: ${toPersianNumber(totalUsd.toFixed(2))} دلار</div>
+                   <div class="mt-1 text-lg text-white">معادل تقریبی: ${toPersianNumber(totalIrt.toLocaleString())} تومان</div>
+              `);
+
+          } catch (cryptoErr) {
+              console.error("خطا در دریافت اطلاعات رمزارز:", cryptoErr);
+              animateElement("crypto-box", "خطا در دریافت اطلاعات رمزارزها");
+          }
+
           } catch (err) {
             console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
             animateElement("profit-box", "خطا در دریافت قیمت صندوق");
