--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <main class="max-w-xl mx-auto p-4 space-y-4">
 
     <section class="bg-purple-800 rounded-xl shadow-md p-6 text-center">
-      <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">ارزش طلای آبشده</h3>
+      <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">دارایی طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
     </section>
 
@@ -104,10 +104,13 @@
         animateElement("crypto-box", `
           <div class="text-yellow-300 text-xl font-bold mb-2">دارایی رمزارزها</div>
           <div class="space-y-1">
-            <div>BTC: ${toPersianNumber(btcAmount)} × ${toPersianNumber(btcUsd.toLocaleString())} = ${toPersianNumber((btcAmount * btcUsd).toFixed(2))} $</div>
-            <div>ETH: ${toPersianNumber(ethAmount)} × ${toPersianNumber(ethUsd.toLocaleString())} = ${toPersianNumber((ethAmount * ethUsd).toFixed(2))} $</div>
-            <div>FIL: ${toPersianNumber(filAmount)} × ${toPersianNumber(filUsd.toLocaleString())} = ${toPersianNumber((filAmount * filUsd).toFixed(2))} $</div>
-            <div class="mt-2">ارزش کل رمزارزها: <span class="font-extrabold text-white">${toPersianNumber(totalIrt.toLocaleString())}</span></div>
+            <div>BTC: ${toPersianNumber(btcAmount)} × ${toPersianNumber(btcUsd.toLocaleString())} = $${toPersianNumber((btcAmount * btcUsd).toFixed(2))}</div>
+            <div>ETH: ${toPersianNumber(ethAmount)} × ${toPersianNumber(ethUsd.toLocaleString())} = $${toPersianNumber((ethAmount * ethUsd).toFixed(2))}</div>
+            <div>FIL: ${toPersianNumber(filAmount)} × ${toPersianNumber(filUsd.toLocaleString())} = $${toPersianNumber((filAmount * filUsd).toFixed(2))}</div>
+
+            <p class="text-2xl font-extrabold persian-numbers text-white drop-shadow mt-2">
+                     ارزش کل رمزارزها: ${toPersianNumber(totalIrt.toLocaleString())}
+            </p>          
           </div>
         `);
       } catch (err) {
@@ -158,7 +161,7 @@
               animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
               animateElement("profit-box", `
                 <div class="text-xl font-extrabold drop-shadow text-yellow-300">
-                  ارزش صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)
+                  دارایی صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)
                 </div>
                 <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
                   ${toPersianNumber(Math.floor(result).toLocaleString())}
