--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div>FIL: ${toPersianNumber(filAmount)} × ${toPersianNumber(filUsd.toLocaleString())} = $${toPersianNumber((filAmount * filUsd).toFixed(2))}</div>
 
             <p class="text-2xl font-extrabold persian-numbers text-white drop-shadow mt-2">
-                     ارزش کل رمزارزها: ${toPersianNumber(totalIrt.toLocaleString())}
+                    ${toPersianNumber(totalIrt.toLocaleString())}
             </p>          
           </div>
         `);
