--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body class="bg-gray-300 text-gray-800">
 
-  <header class="bg-black text-white py-4 text-center space-y-2">
+  <header class="bg-yellow-800 text-white py-4 text-center space-y-2">
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
     <div class="text-base font-bold space-y-1 persian-numbers">
       <div id="usd-box">دلار: ...</div>
