--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
   </style>
 </head>
-<body class="bg-gray-300 text-gray-800">
+<body class="bg-black text-gray-800">
 
   <header class="bg-gray-800 text-white py-4 text-center space-y-2">
     <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
@@ -46,7 +46,7 @@
       در حال محاسبه سود/زیان...
     </section>
 
-    <section id="crypto-box" class="bg-slate-800 rounded-xl shadow-md p-6 text-center text-white persian-numbers">
+    <section id="crypto-box" class="bg-green rounded-xl shadow-md p-6 text-center text-white persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
 
