--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>پورتفوی طلا</title>
+  <title>پورتفوی دارایی</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/font-face.css" rel="stylesheet" />
   <style>
@@ -26,7 +26,7 @@
 <body class="bg-black text-gray-800">
 
   <header class="bg-gray-800 text-white py-4 text-center space-y-2">
-    <h1 class="text-xl font-bold">پورتفوی طلای آبشده و صندوق عیار</h1>
+    <h1 class="text-xl font-bold">پورتفوی دارایی ها</h1>
     <div class="text-base font-bold space-y-1 persian-numbers">
       <div id="usd-box">دلار: ...</div>
       <div id="gold18-box">طلای ۱۸ عیار: ...</div>
