--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     }
   </style>
 </head>
-<body class="bg-black text-gray-800">
+<body class="bg-gray-300 text-gray-800">
 
-  <header class="bg-gray-800 text-white py-4 text-center space-y-2">
+  <header class="bg-black text-white py-4 text-center space-y-2">
     <h1 class="text-xl font-bold">پورتفوی دارایی ها</h1>
     <div class="text-base font-bold space-y-1 persian-numbers">
       <div id="usd-box">دلار: ...</div>
@@ -46,7 +46,7 @@
       در حال محاسبه سود/زیان...
     </section>
 
-    <section id="crypto-box" class="bg-green rounded-xl shadow-md p-6 text-center text-white persian-numbers">
+    <section id="crypto-box" class="bg-green-700 rounded-xl shadow-md p-6 text-center text-white persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
 
