--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
 
-    <section class="bg-purple-800 rounded-xl shadow-md p-3 text-center">
+    <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center">
       <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">دارایی طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
     </section>
 
-    <section id="profit-box" class="rounded-xl p-3 text-center text-yellow-400 persian-numbers">
+    <section id="profit-box" class="rounded-xl p-2 text-center text-yellow-400 persian-numbers">
       در حال محاسبه سود/زیان...
     </section>
 
-    <section id="crypto-box" class="bg-green-800 rounded-xl shadow-md p-3 text-center text-white persian-numbers">
+    <section id="crypto-box" class="bg-green-800 rounded-xl shadow-md p-2 text-center text-white persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
 
-    <section class="bg-white rounded-xl shadow-md p-3 text-center">
+    <section class="bg-white rounded-xl shadow-md p-2 text-center">
       <h3 class="text-xl font-extrabold text-yellow-700 mb-2 drop-shadow">دارایی کل</h3>
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-blue-800 drop-shadow">...</p>
     </section>
@@ -147,7 +147,7 @@
           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
           let valueStr = Math.abs(gold18.change_value).toLocaleString();
           let percentStr = Math.abs(gold18.change_percent).toFixed(2);
-          const color = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
+          const color = gold18.change_percent > 0 ? 'green-400' : gold18.change_percent < 0 ? 'red' : 'black';
           animateElement("gold-change", `<span style="color:${color}">(${toPersianNumber(valueStr)} | ٪${toPersianNumber(percentStr)})</span>`);
           animateElement("gold18-box", `<span style="color:${color}">طلای ۱۸ عیار: ${toPersianNumber(gold18.price.toLocaleString())} (${toPersianNumber(valueStr)} | ${toPersianNumber(percentStr)}%)</span>`);
 
