--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="bg-gray-300 text-gray-800">
 
   <header class="bg-white text-black py-4 text-center space-y-2">
-    <h1 class="text-xl font-bold">پورتفوی دارایی ها</h1>
+    <h1 class="text-2xl font-bold">پورتفوی دارایی ها</h1>
     <div class="text-base font-bold space-y-1 persian-numbers">
       <div id="usd-box">دلار: ...</div>
       <div id="usdt-box">تتر: ...</div> <!-- اضافه شد -->
