--- a/index.html
+++ b/index.html
@@ -141,57 +141,81 @@
         }
 
         if (gold18) {
-          animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
-          let valueStr = Math.abs(gold18.change_value).toLocaleString();
-          let percentStr = Math.abs(gold18.change_percent).toFixed(2);
-          const color = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
-          animateElement("gold-change", `<span style="color:${color}">(${toPersianNumber(valueStr)} | ٪${toPersianNumber(percentStr)})</span>`);
-          animateElement("gold18-box", `<span style="color:${color}">طلای ۱۸ عیار: ${toPersianNumber(gold18.price.toLocaleString())} (${toPersianNumber(valueStr)} | ${toPersianNumber(percentStr)}%)</span>`);
+           animateElement("gold-price", toPersianNumber(gold18.price.toLocaleString()));
+           let valueStr = Math.abs(gold18.change_value).toLocaleString();
+           let percentStr = Math.abs(gold18.change_percent).toFixed(2);
+           const color = gold18.change_percent > 0 ? 'green' : gold18.change_percent < 0 ? 'red' : 'black';
+           animateElement("gold-change", `<span style="color:${color}">(${toPersianNumber(valueStr)} | ٪${toPersianNumber(percentStr)})</span>`);
+           animateElement("gold18-box", `<span style="color:${color}">طلای ۱۸ عیار: ${toPersianNumber(gold18.price.toLocaleString())} (${toPersianNumber(valueStr)} | ${toPersianNumber(percentStr)}%)</span>`);
 
-          const goldPrice = gold18.price;
-          const commission = 30000;
-          const totalGoldValue = ((goldPrice - commission) * 750 / 750 ) * myGoldGrams;
+           const goldPrice = gold18.price;
+           const commission = 30000;
+           const totalGoldValue = ((goldPrice - commission) * 750 / 750 ) * myGoldGrams;
 
-          document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
-          animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
+           document.getElementById("portfolio-title").innerText = `دارایی طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
+           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
-          const profitBox = document.getElementById("profit-box");
-          profitBox.className = "bg-blue-800 rounded-xl shadow-md p-6 text-center";
+           const profitBox = document.getElementById("profit-box");
+           profitBox.className = "bg-blue-800 rounded-xl shadow-md p-6 text-center";
 
-          try {
-            const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1");
-            const symbols = await ayarResponse.json();
-            const ayar = symbols.find(i => i.l18 === "عیار");
+           // تعریف آدرس‌های API و شمارش‌گر ذخیره شده در localStorage
+           let apiUrls = [
+              "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreezhPfvWeEOGOPucTWsPukkDazGzTQ&type=1",
+              "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1"
+           ];
+           let apiCounters = JSON.parse(localStorage.getItem("apiCounters")) || [0, 0];
+           const API_LIMIT = 100;
 
-            if (ayar && ayar.pc) {
-              const result = fundUnits * (ayar.pc / 10);
-              const combined = totalGoldValue + result + totalIrt;
-
-              animateElement("fund-price-box", `
-                <span style="color:${ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black'}">
-                  صندوق عیار: ${toPersianNumber(Number(ayar.pc).toLocaleString())} 
-                  (${toPersianNumber(Math.abs(Number(ayar.pcp)).toFixed(2))}%)
-                </span>
-              `);
-
-              animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
-              animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
-              animateElement("profit-box", `
-                <div class="text-xl font-extrabold drop-shadow text-yellow-300">
-                  دارایی صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)
-                </div>
-                <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
-                  ${toPersianNumber(Math.floor(result).toLocaleString())}
-                </div>
-              `);
-            } else {
-              animateElement("profit-box", "صندوق عیار یافت نشد");
+           async function fetchAyarSymbols() {
+             for (let i = 0; i < apiUrls.length; i++) {
+                if (apiCounters[i] < API_LIMIT) {
+                 try {
+                       const response = await fetch(apiUrls[i]);
+                       apiCounters[i]++;
+                       localStorage.setItem("apiCounters", JSON.stringify(apiCounters));
+                       if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+                       return await response.json();
+                     } catch (err) {
+                         console.error(`خطا در API ${i + 1}:`, err);
+                     }
+                 }
             }
-          } catch (err) {
-            console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
-            animateElement("profit-box", "خطا در دریافت قیمت صندوق");
-          }
+            throw new Error("سقف استفاده از تمام APIها پر شده است.");
+        }
 
+        try {
+           const symbols = await fetchAyarSymbols();
+           const ayar = symbols.find(i => i.l18 === "عیار");
+
+           if (ayar && ayar.pc) {
+                const result = fundUnits * (ayar.pc / 10);
+                const combined = totalGoldValue + result + totalIrt;
+
+                animateElement("fund-price-box", `
+                   <span style="color:${ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black'}">
+                      صندوق عیار: ${toPersianNumber(Number(ayar.pc).toLocaleString())} 
+                      (${toPersianNumber(Math.abs(Number(ayar.pcp)).toFixed(2))}%)
+                   </span>
+                `);
+
+               animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
+               animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
+               animateElement("profit-box", `
+                 <div class="text-xl font-extrabold drop-shadow text-yellow-300">
+                      دارایی صندوق عیار (${toPersianNumber(fundUnits.toLocaleString())} واحد)
+                 </div>
+                 <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
+                      ${toPersianNumber(Math.floor(result).toLocaleString())}
+                 </div>
+             `);
+          } else {
+                  animateElement("profit-box", "صندوق عیار یافت نشد");
+          }
+       } catch (err) {
+              console.error("خطا در دریافت اطلاعات صندوق عیار:", err);
+              animateElement("profit-box", "خطا در دریافت قیمت صندوق");
+      }
+   }
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
