--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
 
   <header class="bg-white text-black py-4 text-center space-y-2">
     <h1 class="text-2xl font-bold">پورتفوی دارایی ها</h1>
-    <div class="text-base font-bold space-y-1 persian-numbers">
-      <div id="usd-box">دلار: ...</div>
-      <div id="usdt-box">تتر: ...</div>
-      <div id="gold18-box">طلای ۱۸ عیار: ...</div>
-      <div id="fund-price-box">صندوق عیار: ...</div>
-      <p id="gold-price" class="hidden"></p>
-      <small id="gold-change" class="hidden"></small>
-    </div>
   </header>
 
   <main class="max-w-xl mx-auto p-4 space-y-4">
 
+   <section class="bg-white rounded-xl shadow-md p-4 text-center">
+      <div class="text-base font-bold space-y-1 persian-numbers">
+       <div id="usd-box">دلار: ...</div>
+       <div id="usdt-box">تتر: ...</div>
+       <div id="gold18-box">طلای ۱۸ عیار: ...</div>
+       <div id="fund-price-box">صندوق عیار: ...</div>
+       <p id="gold-price" class="hidden"></p>
+       <small id="gold-change" class="hidden"></small>
+      </div>
+   </section>
     <section class="bg-purple-800 rounded-xl shadow-md p-4 text-center">
       <h3 id="portfolio-title" class="text-xl font-extrabold text-yellow-300 mb-2 drop-shadow">دارایی طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
@@ -168,12 +170,6 @@
               const result = fundUnits * (ayar.pc / 10);
               const combined = totalGoldValue + result + totalIrt;
 
-              //animateElement("fund-price-box", `
-                //<span style="color:${ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black'}">
-                  //صندوق عیار: ${toPersianNumber(Number(ayar.pc).toLocaleString())} 
-                  //(${toPersianNumber(Math.abs(Number(ayar.pcp)).toFixed(2))}%)
-                //</span>
-              //`);
               const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
               animateElement("fund-price-box", `<span style="color:${color}">صندوق عیار: ${toPersianNumber(ayar.pc.toLocaleString())} (${toPersianNumber(Math.abs(ayar.pcc))} | ${toPersianNumber(Math.abs(ayar.pcp.toFixed(2)))}%)</span>`);
         
