--- a/index.html
+++ b/index.html
@@ -161,8 +161,13 @@
           profitBox.className = "bg-blue-800 rounded-xl shadow-md p-6 text-center";
 
           try {
-            //const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1");
-            const ayarResponse = await fetch("https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreezhPfvWeEOGOPucTWsPukkDazGzTQ&type=1");
+            const urls = [
+                  "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz&type=1",
+                  "https://brsapi.ir/Api/Tsetmc/AllSymbols.php?key=FreezhPfvWeEOGOPucTWsPukkDazGzTQ&type=1"
+            ];
+
+            const randomUrl = urls[Math.floor(Math.random() * urls.length)];
+            const ayarResponse = await fetch(randomUrl);
             const symbols = await ayarResponse.json();
             const ayar = symbols.find(i => i.l18 === "عیار");
 
