--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
   </style>
 </head>
-<body class="bg-gray-300 text-gray-800">
+<body class="bg-yellow-600 text-gray-800">
 
   <header class="bg-yellow-600 text-white py-4 text-center space-y-2">
     <h1 class="text-2xl font-bold">پورتفوی دارایی ها</h1>
