--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-blue-800 drop-shadow">...</p>
     </section>
 
-    <p id="last-update" class="text-sm text-gray-500 text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
+    <p id="last-update" class="text-sm text-black text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
 
   </main>
 
