--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     }
   </style>
 </head>
-<body class="bg-yellow-600 text-gray-800">
+<body class="bg-yellow-500 text-gray-800">
 
-  <header class="bg-yellow-600 text-white py-4 text-center space-y-2">
+  <header class="bg-yellow-500 text-white py-4 text-center space-y-2">
     <h1 class="text-2xl font-bold">پورتفوی دارایی ها</h1>
   </header>
 
@@ -55,7 +55,7 @@
     </section>
 
     <section class="bg-white rounded-xl shadow-md p-2 text-center">
-      <h3 class="text-xl font-extrabold text-yellow-600 mb-2 drop-shadow">دارایی کل</h3>
+      <h3 class="text-xl font-extrabold text-black mb-2 drop-shadow">دارایی کل</h3>
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-blue-800 drop-shadow">...</p>
     </section>
 
