--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
   <script>
     const myGoldGrams = 438.44;
     const fundUnits = 4524;
-    const avgayarPrice = 34;
-    const avgGoldPrice = 34;
+    const avgayarPrice = 189469;
+    const avgGoldPrice = ((127 * 2312000) + (40 * 3810000) + (111.440 * 4725000) + (60 * 8110000) + (100 * 6850000)) / myGoldGrams;
     const btcAmount = 0.0426721;
     const ethAmount = 0.3754664;
     const filAmount = 8.2325135;
@@ -156,7 +156,7 @@
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
           document.querySelector("#portfolio-value").insertAdjacentHTML("afterend", `
-                 <div class="text-sm font-bold text-white mt-1 persian-numbers">میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice)}</div>
+                 <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice)}</div>
           `);
 
 
@@ -192,7 +192,7 @@
                 </div>
               `);
               document.querySelector("#profit-box").insertAdjacentHTML("beforeend", `
-                  <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">میانگین قیمت خرید: ${toPersianNumber(avgayarPrice)}</div>
+                  <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">میانگین قیمت خرید: ${toPersianNumber(avgayarPrice.toLocaleString())}</div>
               `);
 
             } else {
