--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
           document.querySelector("#portfolio-value").insertAdjacentHTML("afterend", `
-                 <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice).toLocaleString().toFixed(2)}</div>
+          <div class="text-sm font-bold text-yellow-300 mt-1 persian-numbers">
+                 میانگین قیمت خرید: ${toPersianNumber(avgGoldPrice.toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }))}
+          </div>
           `);
 
 
